# scala_native_demo

./: .gitignore  LICENSE  README.md
Sample/: build.sbt
Sample/project/: util.scala
Sample/src/main/scala/: Main.scala  MultiMatrix.scala  OwnMath.scala
SampleSubc/: CMakeLists.txt  MutiMatrix.cpp  MutiMatrix.h  OwnMath.cpp  OwnMath.h
demo_cpp/: CMakeLists.txt  NativeDemo.cpp  NativeDemo.h  demo_cpp.cbp
demo_scala/: build.sbt
demo_scala/src/main/scala/: Main.scala  NativeDemo.scala
lib/: README.md
